--- a/src/app/layout.module.css
+++ b/src/app/layout.module.css
@@ -177,7 +177,7 @@
 
 .footerDisclaimer {
   font-size: 11px;
-  color: #6d7f98;
+  color: #526684;
   line-height: 1.5;
   margin-top: 2px;
   max-width: 280px;
